認識如何建構functi

--- a/function.html
+++ b/function.html
@@ -8,14 +8,22 @@
 </head>
 <body>
     <script>
+        hello();
+        hello();
+        hello();
         function hello() {
             console.log("12345 log");
             alert("12345");
             
         }
-        hello();
-        hello();
-        hello();
+        function test() {
+            console.log("test");
+            
+        }
+        test();
+        test();
+        test();
+        test();
 
     </script>
 </body>
