--- a/js_function.html
+++ b/js_function.html
@@ -10,7 +10,7 @@
 
 <body>
     <h2>HTML Forms</h2>
-    <form action="" method="post">
+    <form action="" method="myFrom">
         <p>
             <label for="num1">Num1</label>
             <input type="text" name="num1" id="num1">
