新增加購物車設計的學習檔案

--- a/js_0525.html
+++ b/js_0525.html
@@ -7,6 +7,47 @@
     <title>Document</title>
 </head>
 <body>
-    js test
+    <!-- let const var -->
+    <!-- let 區域變數 -->
+    <!-- const 常數 -->
+    <!-- var 全域變數 -->
+    <!-- 優先用let 大於var 避免衝突-->
+    <!-- alert console.log -->
+    <!-- BOM 是組合包 Brower Object Model -->
+    <!-- window是全域物件 操控視窗 -->
+
+    <script>
+        // alert("123");
+        // window.alert("456");
+        // confirm("Delete?");
+        // confirm("submit?"); 
+        // Bom => window object
+        // 全域的情況
+
+        
+        // prompt("input num1", 0);
+        // window.prompt("input num1");
+
+        // console.log(123);
+        // console.log(456);
+
+        // console.log("測試");
+        // console.log("正常?");
+
+        // typeof 查看資料
+
+        // string
+        // php vs js 
+        // . vs +
+
+        String1 = "hello";
+        String2 = "php";
+        console.log(String1 + String2);
+
+
+
+
+
+    </script>
 </body>
 </html>
