增加轉型的應用

--- a/js_0525.html
+++ b/js_0525.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- let const var -->
     <!-- let 區域變數 -->
@@ -24,7 +26,7 @@
         // Bom => window object
         // 全域的情況
 
-        
+
         // prompt("input num1", 0);
         // window.prompt("input num1");
 
@@ -44,10 +46,30 @@
         String2 = "php";
         console.log(String1 + String2);
 
+        // 2. 組合字串
+        // name = "kai";
+        // combineString = "Hello ${kai}";
+        // console.log(combineString);
+
+        // number
+        // 轉型 數字轉文字 文字轉數字
+        let num1 = 123;
+        let num2 = "456";
+        // parsInt parseFloat String
+
+        combineNum = num1 + parseInt(num2);
+        console.log(combineNum);
+
+        let newNum1 = num1.toString();
+        console.log(newNum1);
+        console.log(typeof(newNum1));
+
+
 
 
 
 
     </script>
 </body>
+
 </html>
