flag/logic to delete

--- a/js_0525.html
+++ b/js_0525.html
@@ -65,6 +65,20 @@
         console.log(typeof(newNum1));
 
 
+        // boolean 布林
+        // true false
+        // flag
+        // is
+        // flag boolean / flag number/flag string
+        var result = confirm("want to delete?");
+        console.log(result);
+        if (result) {
+            console.log("ok delete");
+            // logic to delete the item
+            
+        }
+
+
 
 
 
