--- a/js_0525.html
+++ b/js_0525.html
@@ -70,6 +70,7 @@
         // flag
         // is
         // flag boolean / flag number/flag string
+        // flag 
         var result = confirm("want to delete?");
         console.log(result);
         if (result) {
@@ -77,6 +78,11 @@
             // logic to delete the item
             
         }
+
+        let trueBoolean = true;
+        console.log(trueBoolean);
+        let falseBoolean = false;
+        console.log(falseBoolean);
 
 
 
