--- a/js_0525.html
+++ b/js_0525.html
@@ -53,16 +53,16 @@
 
         // number
         // 轉型 數字轉文字 文字轉數字
-        let num1 = 123;
-        let num2 = "456";
+        // let num1 = 123;
+        // let num2 = "456";
         // parsInt parseFloat String
 
-        combineNum = num1 + parseInt(num2);
-        console.log(combineNum);
+        // combineNum = num1 + parseInt(num2);
+        // console.log(combineNum);
 
-        let newNum1 = num1.toString();
-        console.log(newNum1);
-        console.log(typeof(newNum1));
+        // let newNum1 = num1.toString();
+        // console.log(newNum1);
+        // console.log(typeof(newNum1));
 
 
         // boolean 布林
@@ -71,18 +71,22 @@
         // is
         // flag boolean / flag number/flag string
         // flag 
-        var result = confirm("want to delete?");
-        console.log(result);
-        if (result) {
-            console.log("ok delete");
-            // logic to delete the item
+        // var result = confirm("want to delete?");
+        // console.log(result);
+        // if (result) {
+        //     console.log("ok delete");
+        //     // logic to delete the item
             
-        }
+        // }
 
-        let trueBoolean = true;
-        console.log(trueBoolean);
-        let falseBoolean = false;
-        console.log(falseBoolean);
+        // let trueBoolean = true;
+        // console.log(trueBoolean);
+        // let falseBoolean = false;
+        // console.log(falseBoolean);
+
+        // 跳脫字元
+        console.log("您好\nhello kai");
+
 
 
 
