--- a/js_shopcar.html
+++ b/js_shopcar.html
@@ -10,7 +10,36 @@
 <body>
     <section id="table">
         <div class="title">測試線上購物車</div>
-        <div class="menu1"></div>
+        <div class="menu1">餐點</div>
+        <div class="menu2">單價</div>
+        <div class="menu3">數量</div>
+        <div class="menu4">總價</div>
+        <!-- 第一區 -->
+        <div class="pro1">
+            <form action="">
+                <label for="mainmeal">點選主餐:
+                    <select name="mainmeal" id="mainmeal">
+                        <option value="豬排堡">豬排堡</option>
+                        <option value="香雞堡">豬排堡</option>
+                        <option value="炒泡麵">豬排堡</option>
+                        <option value="雞腿堡">豬排堡</option>
+                        <option value="番茄義大利麵">豬排堡</option>
+                        <option value="白醬義大利麵">豬排堡</option>
+                        <option value="豬排堡">豬排堡</option>
+                        <option value="豬排堡">豬排堡</option>
+                        <option value="豬排堡">豬排堡</option>
+                        <option value="豬排堡">豬排堡</option>
+                    
+                    
+                    </select>
+
+
+                </label>
+            </form>
+
+
+        </div>
+
 
 
 
