--- a/js_0525.html
+++ b/js_0525.html
@@ -102,6 +102,8 @@
         // myStr ="1*1=1 1*2=2 1*3=3 1*4=4 1*5=5";
         // myStr ="1*1=1 1*2=2 1*3=3 1*4=4 1*5=5";
         // myStr ="1*1=1 1*2=2 1*3=3 1*4=4 1*5=5";
+        
+        // let myStr = "";
         myStr = "1*1=1 1*2=2 1*3=3 1*4=4 1*5=5";
         for (let i = 1; i <= 5; i++) {
            myStr = "${i} => 1*1=1 1*2=2 1*3=3 1*4=4 1*5=5 \n";
