--- a/js_0525v02.html
+++ b/js_0525v02.html
@@ -14,8 +14,22 @@
         console.log(typeof(date));
 
         // 建立時間
-        const createDate = new Date(2022, 00,01, 10, 11, 12);
-        console.log(createDate);
+        // const createDate = new Date(2022, 00,01, 10, 11, 12);
+        // console.log(createDate);
+        
+        // date.getFullYear();
+        console.log(date.getFullYear());
+        // date.getFullMonth()+1; //0-11
+        // date.getFullDate();
+        // date.getHour();
+        // date.getMinutes();
+        // date.getSeconds();
+
+        // 倒數日期
+        function addDays(numDate) {
+            
+        }
+
     </script>
 </body>
 </html>
