--- a/js_if_052601.html
+++ b/js_if_052601.html
@@ -36,16 +36,25 @@
         let myLottery = true;
         let money = 2000;
 
-        if (myLottery) {
-            if (money > 1000) {
-                console.log("myLottery", myLottery);
-                console.log("money"), money;
-                console.log("中獎了");
-            }
-        }
+        // if (myLottery) {
+        //     if (money > 1000) {
+        //         console.log("myLottery", myLottery);
+        //         console.log("money"), money;
+        //         console.log("中獎了");
+        //     }
+        // }
+        // else{
+        //     console.log(銘謝惠顧);
+        // }
         
 
         // 方法二
+
+        if (myLottery && money > 1000) {
+            console.log("myLottery", myLottery);
+                console.log("money"), money;
+                console.log("方法二有差別嗎?");
+        }
 
       
 
