--- a/02.html
+++ b/02.html
@@ -15,13 +15,28 @@
     <h2>My First JavaScript</h2>
 
     <p id="demo"></p>
-    <script>
+    <!-- <script>
         const cars = ["Saab", "Vovol", "BMW"];
         cars[0] = "Moto";
         cars.push("Audi");
         document.getElementById("demo").innerHTML = cars;
 
+    </script> -->
+
+    <!-- <script>
+        let text1 = "What a very";
+        text1 += "nice day";
+        document.getElementById("demo").innerHTML = text1;
+    </script> -->
+
+    <script>
+        function myFunction(p1, p2) {
+            return p1 * p2;
+        }
+        document.getElementById("demo").innerHTML = myFunction (7, 8);
     </script>
+
+
    
 
     
