--- a/01.html
+++ b/01.html
@@ -22,11 +22,23 @@
 <script>
     let input = prompt('請輸入學生數量');
     // console.log("input", input);
+    // for (let index = 0; index < array.length; index++) {
+    //     const element = array[index];
+        
+    // }
+
+    let i = 1;
+    while (i <= input) {
+        console.log(`第${i}個人`);
+
+        i++
+        
+    }
 
     //  let input = 1;
-     let chinese = prompt('請輸入國文');
-     let english = prompt('請輸入英文');
-     let math = prompt('請輸入數學');
+     let chinese = Number(prompt(`學生${i}請輸入國文`));
+     let english = Number(prompt(`學生${i}請輸入英文`));
+     let math = Number(prompt(`學生${i}請輸入數學`));
      let sum = chinese + english + math;
      let average = sum / 3;
     //  document.write(`國文=>${chinese} 英文=>${english} 數學=>${math} <br>`);
